--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
     "source-map-support": "^0.5.21",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
