--- a/package.json
+++ b/package.json
@@ -10,25 +10,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "^2.0.0",
     "@remix-run/express": "^2.0.0",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "isbot": "^3.6.8",
-    "lucide-react": "^0.279.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
     "source-map-support": "^0.5.21",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.0",
