--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "remix build",
     "dev": "remix dev --manual -c \"node server.js\"",
     "start": "cross-env NODE_ENV=production node ./server.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@remix-run/css-bundle": "^2.0.0",
@@ -27,6 +28,7 @@
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@remix-run/dev": "^2.0.0",
     "@remix-run/eslint-config": "^2.0.0",
     "@types/compression": "^1.7.2",
@@ -37,6 +39,8 @@
     "@types/source-map-support": "^0.5.6",
     "chokidar": "^3.5.3",
     "eslint": "^8.38.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
