--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "isbot": "^3.6.8",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
