--- a/package.json
+++ b/package.json
@@ -11,39 +11,41 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@remix-run/css-bundle": "^2.0.0",
-    "@remix-run/express": "^2.0.0",
-    "@remix-run/node": "^2.0.0",
-    "@remix-run/react": "^2.0.0",
-    "clsx": "^2.0.0",
+    "@heroicons/react": "^2.1.1",
+    "@remix-run/css-bundle": "^2.5.0",
+    "@remix-run/express": "^2.5.0",
+    "@remix-run/node": "^2.5.0",
+    "@remix-run/react": "^2.5.0",
+    "clsx": "^2.1.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.2.0",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "isbot": "^3.6.8",
+    "helmet": "^7.1.0",
+    "isbot": "^4.4.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.4.0",
+    "react-use": "^17.4.3",
     "source-map-support": "^0.5.21",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
-    "@remix-run/dev": "^2.0.0",
-    "@remix-run/eslint-config": "^2.0.0",
-    "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.4",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@types/source-map-support": "^0.5.6",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@remix-run/dev": "^2.5.0",
+    "@remix-run/eslint-config": "^2.5.0",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/source-map-support": "^0.5.10",
     "chokidar": "^3.5.3",
-    "eslint": "^8.38.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
